Fixed Discord Banner on Mobile and updated bg-video

--- a/global.css
+++ b/global.css
@@ -289,7 +289,7 @@ footer {
   width: 100%;
   height: 100%;
   z-index: 2;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.65);
 }
 
 .background-video-overlay {
@@ -600,6 +600,7 @@ button:hover {
   }
   .promo-card-wide {
     height: auto;
+    width: 100%;
   }
 }
 
